# sauron

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  plan.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/bins/crebain/: Cargo.toml  README.md
backend/bins/crebain/src/: cli.rs  client.rs  db_url.rs  dsn.rs  engine.rs  generator.rs  harness.rs  main.rs  metrics.rs  netlimit.rs  procstat.rs  report.rs  report_html.rs  schedule.rs  transport.rs  user.rs
backend/bins/sauron-api/: Cargo.toml
backend/bins/sauron-api/src/: admin_storage.rs  error.rs  main.rs  symbolicate.rs  tier_read.rs
backend/bins/sauron-api/src/routes/: admin.rs  analytics.rs  apps.rs  artifacts.rs  auth.rs  devices.rs  funnels.rs  issues.rs  journeys.rs  mod.rs  monitors.rs  orgs.rs  performance.rs  projects.rs  screens.rs  sessions.rs
backend/bins/sauron-ingest/: Cargo.toml
backend/bins/sauron-ingest/src/: main.rs
backend/bins/sauron-migrate/: Cargo.toml
backend/bins/sauron-migrate/src/: main.rs
backend/bins/sauron-monitor/: Cargo.toml
backend/bins/sauron-monitor/src/: main.rs
backend/bins/sauron-symcli/: Cargo.toml
backend/bins/sauron-symcli/src/: main.rs
backend/bins/sauron-tier/: Cargo.toml
backend/bins/sauron-tier/src/: main.rs
backend/crates/sauron-auth/: Cargo.toml
backend/crates/sauron-auth/src/: extractors.rs  jwt.rs  lib.rs  password.rs  rbac.rs
backend/crates/sauron-core/: Cargo.toml
backend/crates/sauron-core/src/: config.rs  envelope.rs  fingerprint.rs  ids.rs  lib.rs  monitor.rs
backend/crates/sauron-db/: Cargo.toml
backend/crates/sauron-db/src/: filter.rs  lib.rs  models.rs  pool.rs  repo.rs  schema.rs
backend/crates/sauron-monitor-core/: Cargo.toml
backend/crates/sauron-monitor-core/src/: lib.rs  probe.rs  ssrf.rs  state.rs  status.rs  webhook.rs
backend/crates/sauron-pipeline/: Cargo.toml
backend/crates/sauron-pipeline/src/: enrich.rs  lib.rs  process.rs  symbolize.rs  worker.rs
backend/crates/sauron-redis/: Cargo.toml
backend/crates/sauron-redis/src/: lib.rs
backend/crates/sauron-symbols/: Cargo.toml
backend/crates/sauron-symbols/src/: cache.rs  content.rs  dart.rs  dart_trace.rs  engine.rs  js.rs  lib.rs  matcher.rs
backend/crates/sauron-symbols/tests/fixtures/: sample.c  sample.elf  sample_inline.c  sample_inline.elf
backend/crates/sauron-telemetry/: Cargo.toml
backend/crates/sauron-telemetry/src/: lib.rs
backend/crates/sauron-tier/: Cargo.toml
backend/crates/sauron-tier/src/: duck.rs  layout.rs  lib.rs  merge.rs  plan.rs
backend/migrations/2026-07-12-000001_init/: down.sql  up.sql
backend/migrations/2026-07-12-000002_projects_apps_rbac/: down.sql  up.sql
backend/migrations/2026-07-12-000003_rbac_index/: down.sql  up.sql
backend/migrations/2026-07-13-000004_sessions_devices/: down.sql  up.sql
backend/migrations/2026-07-13-000005_transactions/: up.sql
backend/migrations/2026-07-13-000006_saved_funnels/: down.sql  up.sql
backend/migrations/2026-07-14-000007_events_screen/: down.sql  up.sql
backend/migrations/2026-07-14-000008_app_types/: down.sql  up.sql
backend/migrations/2026-07-14-000009_monitors/: down.sql  up.sql
backend/migrations/2026-07-14-000010_tiering_state/: down.sql  up.sql
backend/migrations/2026-07-14-000011_error_events_partitioned/: down.sql  up.sql
backend/migrations/2026-07-14-000012_analytics_events_partitioned/: down.sql  up.sql
backend/migrations/2026-07-14-000013_transactions_partitioned/: down.sql  up.sql
backend/migrations/2026-07-15-000014_symbol_artifacts/: down.sql  up.sql
backend/migrations/2026-07-15-000015_source_read_perm/: down.sql  up.sql
backend/migrations/2026-07-20-000016_error_events_scopes/: down.sql  up.sql
backend/migrations/2026-07-20-000017_analytics_events_scopes/: down.sql  up.sql
backend/migrations/2026-07-20-000018_tags_gin/: down.sql  up.sql
dashboard/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.svelte  app.css  routes.ts  vite-env.d.ts
dashboard/src/pages/: DeviceDetail.svelte  DevicesInventory.svelte  Docs.svelte  Events.svelte  FunnelBuilder.svelte  IssueDetail.svelte  Issues.svelte  JourneyExplorer.svelte  Login.svelte  Members.svelte  MonitorDetail.svelte  Monitors.svelte  (+14 more)
dashboard/static/: config.js  config.template.js
docs/: audit-2026-07-12-rbac.md  audit-2026-07-13-feature-checklist.md
examples/csharp-server/: Program.cs  README.md  csharp-server.csproj
examples/flutter-app/: README.md  pubspec.yaml
examples/node-server/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
examples/python-server/: README.md  main.py  requirements.txt
examples/svelte-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
packaging/rpm/: INSTALL.md  SETUP.md  build-rpm.sh  fetch-libduckdb.sh  sauron.spec
sdks/csharp/: CHANGELOG.md  README.md  Sauron.slnx
sdks/flutter/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
sdks/js/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/node/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/sauron/: __init__.py  _autocapture.py  _client.py  _dsn.py  _gzip.py  _queue.py  _scope.py  _stacktrace.py  _transport.py
sdks/python/tests/: _fake.py  test_autocapture.py  test_beforesend.py  test_breadcrumbs.py  test_dsn.py  test_envelope.py  test_golden.py  test_gzip.py  test_metadata.py  test_queue.py  test_retry.py  test_scope.py  test_stacktrace.py  test_transaction.py  test_transport.py  test_transport_options.py
wiki/: Architecture.md  Best-Practices.md  Browser-SDK.md  CSharp-SDK.md  Capabilities.md  Dashboard.md  Examples.md  Flutter-SDK.md  Framework-Integrations.md  Getting-Started.md  Home.md  Ingest-Wire-Contract.md  Node-SDK.md  Python-SDK.md  RPM-Install.md  Search.md  Troubleshooting.md  _Sidebar.md
(+268 files in other folders)
