[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sauron-sdk"
version = "0.3.0"
description = "Server-side Python SDK for the Sauron observability + analytics gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Sauron" }]
keywords = ["observability", "analytics", "error-tracking", "sauron"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Bug Tracking",
]
# No runtime dependencies — transport uses stdlib urllib + threading.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["sauron*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
