[package]
name = "sauron-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sauron-ingest"
path = "src/main.rs"

[dependencies]
sauron-core.workspace = true
sauron-db.workspace = true
sauron-redis.workspace = true
sauron-pipeline.workspace = true
sauron-symbols.workspace = true
sauron-telemetry.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
