[package]
name = "sauron-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sauron-monitor"
path = "src/main.rs"

[dependencies]
sauron-core = { workspace = true }
sauron-db = { workspace = true }
sauron-monitor-core = { workspace = true }
sauron-telemetry = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
