[package]
name = "sauron-tier-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sauron-tier"
path = "src/main.rs"

[dependencies]
sauron-core.workspace = true
sauron-db.workspace = true
sauron-tier.workspace = true
sauron-telemetry.workspace = true
tokio = { workspace = true }
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
