[package]
name = "sauron-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
getrandom.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
serde_json.workspace = true
