[package]
name = "sauron-redis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sauron-core.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
