[package]
name = "sauron-symbols"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sha2.workspace = true
hex.workspace = true
zstd.workspace = true
object.workspace = true
addr2line.workspace = true
gimli.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
